force-app/main/default/objects/Partner_Addendum__c/Partner_Addendum__c.object-meta.xml
<CustomObject>
    <description>Seasonal Variations, Negotiated Payments, Loans and Repayments</description>
    <label>Partner Addendum</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Partner Addendum Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Addendums</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>