force-app/main/default/objects/Partner_Addendum__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>This is the total amount of the Representation allowance.</description>
    <label>Amount</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>