force-app/main/default/objects/Partner_Addendum__c/fields/Annual_Amount__c.field-meta.xml
<CustomField>
    <fullName>Annual_Amount__c</fullName>
    <description>Accommodation Payment Negotiated Rate, Storage of Carded Articles Annual Fee, Storage of Mail fee, Mail Conveyancing Fee rate per KM, Clearance of Remote SPB Fee Amount and Counter Collection on non RSD days Rate per point</description>
    <label>Annual Amount</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>