force-app/main/default/objects/Partner_Addendum__c/fields/Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date__c</fullName>
    <description>This is the effective date the fee will be applied for New Business Spotter&apos;s Fee records and Customer Transfer Fee records.</description>
    <inlineHelpText>Effective date the fee will be applied for New Business Spotter&apos;s Fee records and Customer Transfer Fee records.</inlineHelpText>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>