force-app/main/default/objects/Partner_Addendum__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>End date for Seasonal Variations, Negotiated Payments ad Representation Allowances.</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>