force-app/main/default/objects/Partner_Addendum__c/fields/Facility__c.field-meta.xml
<CustomField>
    <fullName>Facility__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Facility related to this record</description>
    <inlineHelpText>The Facility related to this record</inlineHelpText>
    <label>Facility</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Is_a_facility__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Partner Addendums (Facility)</relationshipLabel>
    <relationshipName>Facility_Addendums</relationshipName>
    <type>Lookup</type>
</CustomField>