force-app/main/default/objects/Partner_Addendum__c/fields/GL_Code__c.field-meta.xml
<CustomField>
    <fullName>GL_Code__c</fullName>
    <label>GL Code</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>