force-app/main/default/objects/Partner_Addendum__c/fields/Licence__c.field-meta.xml
<CustomField>
    <fullName>Licence__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Licence</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Licence, Licence CMA, Licence CPA</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Partner Addendums (Licence)</relationshipLabel>
    <relationshipName>Licence_Addendums</relationshipName>
    <type>Lookup</type>
</CustomField>