force-app/main/default/objects/Partner_Addendum__c/fields/Monthly_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Payment_Amount__c</fullName>
    <description>This is the monthly amount of the allowance.</description>
    <formula>IF( OR( ISNULL( Amount__c),  ISNULL( Term__c )) , 0,  ROUND( Amount__c  /  Term__c ,2))</formula>
    <label>Monthly Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>