force-app/main/default/objects/Partner_Addendum__c/fields/Negotiated_Lump_Sum__c.field-meta.xml
<CustomField>
    <fullName>Negotiated_Lump_Sum__c</fullName>
    <description>This is the negotiated lump sum amount for Customer Transfer Fee.</description>
    <inlineHelpText>Negotiated lump sum amount for Customer Transfer Fee.</inlineHelpText>
    <label>Negotiated Lump Sum</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>