force-app/main/default/objects/Partner_Addendum__c/fields/Policy_Number__c.field-meta.xml
<CustomField>
    <fullName>Policy_Number__c</fullName>
    <description>This is the policy number of the insurance.</description>
    <label>Policy Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>