force-app/main/default/objects/Partner_Addendum__c/fields/Renewal_Status__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Status__c</fullName>
    <label>Renewal Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>First Reminder Sent</fullName>
            </value>
            <value>
                <fullName>Second Reminder Sent</fullName>
            </value>
            <value>
                <fullName>Final Reminder Sent</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Ceased</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>