force-app/main/default/objects/Partner_Addendum__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Start date for Seasonal Variations, Negotiated Payments ad Representation Allowances.</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>