force-app/main/default/objects/Partner_Addendum__c/fields/State_Admin__c.field-meta.xml
<CustomField>
    <fullName>State_Admin__c</fullName>
    <description>Email address for notification for End Date. Populated from Partner Info Settings.</description>
    <label>State Admin</label>
    <type>Email</type>
</CustomField>