force-app/main/default/objects/Partner_Addendum__c/fields/Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type__c</fullName>
    <description>Sub Type</description>
    <label>Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mail Bag Despatched Variation</fullName>
            </value>
            <value>
                <fullName>Private Counter Delivery Points Variation</fullName>
            </value>
            <value>
                <fullName>Business Counter Delivery Points Variation</fullName>
            </value>
            <value>
                <fullName>Private Delivery Points Variation</fullName>
            </value>
            <value>
                <fullName>Business Delivery Points Variation</fullName>
            </value>
            <value>
                <fullName>Negotiated Accommodation Fee</fullName>
            </value>
            <value>
                <fullName>Storage of Carded Articles Annual Fee</fullName>
            </value>
            <value>
                <fullName>Storage of Mail Fee</fullName>
            </value>
            <value>
                <fullName>Mail Conveyancing Fee</fullName>
            </value>
            <value>
                <fullName>Clearance of Remote SPB Fee</fullName>
            </value>
            <value>
                <fullName>Counter Collection on non RSD days</fullName>
            </value>
            <value>
                <fullName>Representation Allowance - Reply Paid</fullName>
            </value>
            <value>
                <fullName>Representation Allowance - First Day Covers</fullName>
            </value>
            <value>
                <fullName>Business Transit Points Variation</fullName>
            </value>
            <value>
                <fullName>Private Transit Points Variation</fullName>
            </value>
            <value>
                <fullName>New Business Spotter&apos;s Fee</fullName>
            </value>
            <value>
                <fullName>Customer Transfer Fee</fullName>
            </value>
            <value>
                <fullName>Mail Service Payment</fullName>
            </value>
            <value>
                <fullName>Interest Free Loan</fullName>
            </value>
            <value>
                <fullName>Refurbishment Loan</fullName>
            </value>
            <value>
                <fullName>Security Loan</fullName>
            </value>
            <value>
                <fullName>Ad-hoc</fullName>
            </value>
            <value>
                <fullName>Negotiated Payment – Compliance Payment</fullName>
            </value>
            <value>
                <fullName>Negotiated Payment – Performance Payment</fullName>
            </value>
            <value>
                <fullName>Miscellaneous Type 3</fullName>
            </value>
            <value>
                <fullName>Acceptance of Defence Parcels Less Than 2kg</fullName>
            </value>
            <value>
                <fullName>Annual Rent Subsidy Amount</fullName>
            </value>
            <value>
                <fullName>Annual Phone Subsidy Amount</fullName>
            </value>
            <value>
                <fullName>Annual Lease Fee</fullName>
            </value>
            <value>
                <fullName>Public Liability</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>