force-app/main/default/objects/Partner_Addendum__c/fields/Term__c.field-meta.xml
<CustomField>
    <fullName>Term__c</fullName>
    <description>Representation allowances can be a lump sum payment or a payment over a number of terms.</description>
    <label>Term</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>