force-app/main/default/objects/Partner_Addendum__c/recordTypes/Insurance.recordType-meta.xml
<RecordType>
    <fullName>Insurance</fullName>
    <active>true</active>
    <description>Insurance</description>
    <label>Insurance</label>
</RecordType>