force-app/main/default/objects/Partner_Addendum__c/recordTypes/Loan.recordType-meta.xml
<RecordType>
    <fullName>Loan</fullName>
    <active>true</active>
    <description>Loan agreement</description>
    <label>Loan</label>
</RecordType>