force-app/main/default/objects/Partner_Addendum__c/recordTypes/Negotiated_Payment_Type_F1.recordType-meta.xml
<RecordType>
    <fullName>Negotiated_Payment_Type_F1</fullName>
    <active>true</active>
    <description>Counter Collection on non RSD days</description>
    <label>Negotiated Payment Type F1</label>
</RecordType>