force-app/main/default/objects/Partner_Addendum__c/recordTypes/Negotiated_Payment_Type_F2.recordType-meta.xml
<RecordType>
    <fullName>Negotiated_Payment_Type_F2</fullName>
    <active>true</active>
    <description>Representation Allowance</description>
    <label>Negotiated Payment Type F2</label>
</RecordType>