force-app/main/default/objects/Partner_Addendum__c/recordTypes/Negotiated_Payment_Type_L1.recordType-meta.xml
<RecordType>
    <fullName>Negotiated_Payment_Type_L1</fullName>
    <active>true</active>
    <description>Negotiated Accommodation Fee, Storage of Carded Articles Annual Fee, Storage of Mail Fee, Annual Lease Account Payment, Negotiated Payments - Compliance &amp; Performance, Misc Type 3, Acceptance of Defence Parcels Less than 2kg, Annual Phone &amp; Rent Subsidies</description>
    <label>Negotiated Payment Type L1</label>
</RecordType>