force-app/main/default/objects/Partner_Addendum__c/recordTypes/Negotiated_Payment_Type_L3.recordType-meta.xml
<RecordType>
    <fullName>Negotiated_Payment_Type_L3</fullName>
    <active>true</active>
    <description>Mail Conveyancing Fee</description>
    <label>Negotiated Payment Type L3</label>
</RecordType>