force-app/main/default/objects/Partner_Addendum__c/recordTypes/Negotiated_Payment_Type_L4.recordType-meta.xml
<RecordType>
    <fullName>Negotiated_Payment_Type_L4</fullName>
    <active>true</active>
    <description>Clearance of Remote SPB Fee</description>
    <label>Negotiated Payment Type L4</label>
</RecordType>