force-app/main/default/objects/Partner_Addendum__c/recordTypes/Negotiated_Payment_Type_L5.recordType-meta.xml
<RecordType>
    <fullName>Negotiated_Payment_Type_L5</fullName>
    <active>true</active>
    <description>New Business Spotter&apos;s Fee</description>
    <label>Negotiated Payment Type L5</label>
</RecordType>