force-app/main/default/objects/Partner_Addendum__c/recordTypes/Negotiated_Payment_Type_L6.recordType-meta.xml
<RecordType>
    <fullName>Negotiated_Payment_Type_L6</fullName>
    <active>true</active>
    <description>Customer Transfer Fee</description>
    <label>Negotiated Payment Type L6</label>
</RecordType>