force-app/main/default/objects/Partner_Addendum__c/recordTypes/Negotiated_Payment_Type_L7.recordType-meta.xml
<RecordType>
    <fullName>Negotiated_Payment_Type_L7</fullName>
    <active>true</active>
    <description>Mail Service Payment</description>
    <label>Negotiated Payment Type L7</label>
</RecordType>