force-app/main/default/objects/Partner_Addendum__c/recordTypes/Negotiated_Payment_Type_L8.recordType-meta.xml
<RecordType>
    <fullName>Negotiated_Payment_Type_L8</fullName>
    <active>true</active>
    <description>Ad-hoc</description>
    <label>Negotiated Payment Type L8</label>
</RecordType>