force-app/main/default/objects/Partner_Addendum__c/recordTypes/Repayment_Arrangement.recordType-meta.xml
<RecordType>
    <fullName>Repayment_Arrangement</fullName>
    <active>true</active>
    <description>Repayment Arrangement</description>
    <label>Repayment Arrangement</label>
</RecordType>