force-app/main/default/objects/Partner_Addendum__c/recordTypes/Seasonal_Variation.recordType-meta.xml
<RecordType>
    <fullName>Seasonal_Variation</fullName>
    <active>true</active>
    <description>Seasonal Variation</description>
    <label>Seasonal Variation</label>
</RecordType>