force-app/main/default/objects/Partner_Addendum__c/validationRules/Annual_Fee_for_Storage_of_Mail_Fee.validationRule-meta.xml
<ValidationRule>
    <fullName>Annual_Fee_for_Storage_of_Mail_Fee</fullName>
    <active>true</active>
    <description>Maximum is $20000</description>
    <errorConditionFormula>AND(RecordType.DeveloperName = &apos;Negotiated_Payment_Type_L1&apos;, ISPICKVAL( Sub_Type__c , &apos;Storage of Mail Fee&apos;),  Annual_Amount__c  &gt; 20000)</errorConditionFormula>
    <errorMessage>Maximum value allowed for Annual Fee is $20000</errorMessage>
</ValidationRule>