force-app/main/default/objects/Partner_Addendum__c/validationRules/Early_Cease_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Early_Cease_Date</fullName>
    <active>true</active>
    <description>If early cease is requested, then Date for Early Cease must be specified.</description>
    <errorConditionFormula>AND(ISPICKVAL(Request_Change__c, &apos;Cease Early&apos;), 
	OR(ISBLANK(Date_for_Earlier_Cease__c),  Date_for_Earlier_Cease__c &gt;= End_Date__c)
	)</errorConditionFormula>
    <errorDisplayField>Date_for_Earlier_Cease__c</errorDisplayField>
    <errorMessage>Please specify new end date that is earlier than the current End Date</errorMessage>
</ValidationRule>