force-app/main/default/objects/Partner_Addendum__c/validationRules/Max_RSD_Points.validationRule-meta.xml
<ValidationRule>
    <fullName>Max_RSD_Points</fullName>
    <active>true</active>
    <description>Maximum allowed value for RSD points is 1000</description>
    <errorConditionFormula>AND( RecordType.DeveloperName = &apos;Negotiated_Payment_Type_F1&apos;,   RSD_Points__c  &gt; 1000)</errorConditionFormula>
    <errorMessage>Maximum allowed value for RSD points is 1000</errorMessage>
</ValidationRule>