force-app/main/default/objects/Partner_Addendum__c/validationRules/Max_Value_for_Term_Loan.validationRule-meta.xml
<ValidationRule>
    <fullName>Max_Value_for_Term_Loan</fullName>
    <active>true</active>
    <description>For Loans, maximum is 60 months</description>
    <errorConditionFormula>AND(RecordType.DeveloperName = &apos;Loan&apos;, Term__c &gt; 60)</errorConditionFormula>
    <errorMessage>For Loans, maximum allowed value is 60 months</errorMessage>
</ValidationRule>