force-app/main/default/objects/Partner_Addendum__c/validationRules/Max_Value_for_Term_Repayment.validationRule-meta.xml
<ValidationRule>
    <fullName>Max_Value_for_Term_Repayment</fullName>
    <active>true</active>
    <description>For Repayment Arrangement, maximum is 36 months.</description>
    <errorConditionFormula>AND(RecordType.DeveloperName = &apos;Repayment Arrangement&apos;, Term__c &gt; 36)</errorConditionFormula>
    <errorMessage>For Repayment Arrangement, maximum allowed value is 36 months.</errorMessage>
</ValidationRule>